cluster/kube-prometheus-stack-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`grafana.k3d.localhost`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`prometheus.k3d.localhost`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
